--- a/MySqlManager/MySqlManager/MySqlManager.csproj
+++ b/MySqlManager/MySqlManager/MySqlManager.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MySqlConnector" Version="2.3.6" />
+    </ItemGroup>
+
 </Project>
