--- a/MySqlManager/MySqlManager/MySqlManager.csproj
+++ b/MySqlManager/MySqlManager/MySqlManager.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="MySqlConnector" Version="2.3.6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\fonts\" />
+    </ItemGroup>
+
 </Project>
