--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 MySqlManager/MySqlManager/electron-linux/blazorelectronapp filter=lfs diff=lfs merge=lfs -text
+* linguist-vendored
+*.cs linguist-vendored=false
